add_executable(timestamp_unittest Timestamp_unittest.cc)
target_link_libraries(timestamp_unittest muduo_base)

add_executable(atomic_unittest Atomic_unittest.cc)
# 不需要，Atomic只含头文件，已包含target_link_libraries(atomic_unittest muduo_base)
add_test(NAME atomic_unittest COMMAND atomic_unittest)

add_executable(exception_test Exception_test.cc)
target_link_libraries(exception_test muduo_base)

add_executable(thread_test Thread_test.cc)
target_link_libraries(thread_test muduo_base)

add_executable(mutex_test Mutex_test.cc)
target_link_libraries(mutex_test muduo_base)

add_executable(countDownLatch_test CountDownLatch_test.cc)
target_link_libraries(countDownLatch_test muduo_base)

add_executable(blockingQueue_test BlockingQueue_test.cc)
target_link_libraries(blockingQueue_test muduo_base)
